--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
     </style>
     <body>
-        <p>Secret value is <b>314159</b>.</p>
+        <p>Secret value is <b>7274168</b>.</p>
         <p>Read more at
             <a href="http://www.codeabbey.com/index/task_view/basics-of-html">this task</a>.
         </p>
